force-app/main/default/objects/Contact/fields/Institution__c.field-meta.xml
<CustomField>
    <fullName>Institution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Only for doctors.  Depicts doctor&#39;s place of work.  Used in appointment searches.</description>
    <label>Institution</label>
    <referenceTo>Institution__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>