force-app/main/default/objects/Contact/fields/SouthernHeartID__c.field-meta.xml
<CustomField>
    <fullName>SouthernHeartID__c</fullName>
    <description>Custom Autonumber field used to track doctor and patient records on the AppointmentContacts object.  Autonumber ensures each contact is unique.  Sneaky ID.</description>
    <displayFormat>{00000000}</displayFormat>
    <label>SouthernHeartID</label>
    <type>AutoNumber</type>
</CustomField>