force-app/main/default/objects/Contact/fields/Specialty__c.field-meta.xml
<CustomField>
    <fullName>Specialty__c</fullName>
    <label>Specialty</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Allergy &amp; Immunology</fullName>
            </value>
            <value>
                <fullName>Anesthesiology</fullName>
            </value>
            <value>
                <fullName>Dermatology</fullName>
            </value>
            <value>
                <fullName>Diagnostic Radiology</fullName>
            </value>
            <value>
                <fullName>Emergency Medicine</fullName>
            </value>
            <value>
                <fullName>Family Medicine</fullName>
            </value>
            <value>
                <fullName>Internal Medicine</fullName>
            </value>
            <value>
                <fullName>Medical Genetics</fullName>
            </value>
            <value>
                <fullName>Neurology</fullName>
            </value>
            <value>
                <fullName>Nuclear Medicine</fullName>
            </value>
            <value>
                <fullName>Obstetrics and Gynecology</fullName>
            </value>
            <value>
                <fullName>Ophthamology</fullName>
            </value>
            <value>
                <fullName>Pathology</fullName>
            </value>
            <value>
                <fullName>Pediatrics</fullName>
            </value>
            <value>
                <fullName>Physical Medicine &amp; Rehabilitation</fullName>
            </value>
            <value>
                <fullName>Preventative Medicine</fullName>
            </value>
            <value>
                <fullName>Psychiatry</fullName>
            </value>
            <value>
                <fullName>Radiation Oncology</fullName>
            </value>
            <value>
                <fullName>Surgery</fullName>
            </value>
            <value>
                <fullName>Urology</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>